[tool.poetry]
name = "incolume.py.game.pacman"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
license = "MIT"
packages =[
  {include='incolume', from=''}
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
